--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Al profe lo emgañan</p>
-    <body bgcolor="#F9E79F"
-        
-    
+  <p>Los Mejores</p>  
 </body>
 </html>
